syntax = "proto3";

package cracker;

option go_package = "./cracker";

// Service definisi untuk komunikasi Master-Worker
service CrackerService {
  // Worker meminta chunk pekerjaan baru (Work Stealing / Pull-based)
  rpc GetTask (WorkerInfo) returns (TaskChunk);
  
  // Worker melaporkan hasil (Found/Not Found)
  rpc ReportResult (CrackResult) returns (Ack);
}

message WorkerInfo {
  string worker_id = 1;
  int32 cpu_cores = 2; // Kapasitas worker
}

message TaskChunk {
  string task_id = 1;
  int64 start_index = 2; // Index awal keyspace
  int64 end_index = 3;   // Index akhir keyspace
  string target_hash = 4; // Hash yang harus di-crack
  bool no_more_work = 5;  // Signal jika pekerjaan selesai
}

message CrackResult {
  string task_id = 1;
  bool success = 2;
  string found_password = 3;
  string worker_id = 4;
}

message Ack {
  bool received = 1;
}

